# chatbot-llm-playground

./: .gitignore  document_qa.py  requirements.txt
anthropic_pure/: document_qa_anthro.py
anthropic_pure/example/: batches.py  simple_chat.py
deepseek/: local_chatbot.ipynb  local_chatbot.py  requirements.txt
deepseek/mcp_project/: server_config.json  test_model_tools.py
langchain/: example.ipynb  example.py
local_llm/: local_chatbot.ipynb
local_llm/mcp_project/: README.md  filesystem_server.py  local_llm_mcp_chatbot.py  mcp_llm_readme.md  server_config.json  server_config_1.json  server_config_filesystem.json  server_config_sqlite.json  test_mcp_server.py
local_llm/mcp_project/local_api_llm/: chatbot_via_llm_api.py  example.py  test_ollama_api.py
mcp-course/: L3.ipynb
mcp-course/L4/: pyproject.toml
mcp-course/L4/mcp_project/: mcp_chatbot_cohere.py  mcp_chatbot_langchain.py
