[project]
name = "l4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.51.0",
    "arxiv>=2.2.0",
    "langchain>=0.3.25",
    "langchain-cohere>=0.4.4",
    "langchain-core>=0.3.60",
    "mcp>=1.9.0",
    "nest-asyncio>=1.6.0",
]
